[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aiopywttr"
version = "2.3.0"
description = "Asynchronous wrapper for wttr.in weather API"
readme = "README.md"
keywords = ["forecast"]
license = { text = "MIT" }
authors = [{ name = "monosans", email = "hsyqixco@protonmail.com" }]
requires-python = ">=3.8"
classifiers = [
  "Environment :: Web Environment",
  "Framework :: AsyncIO",
  "Framework :: Pydantic",
  "Framework :: Pydantic :: 1",
  "Framework :: Pydantic :: 2",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dependencies = [
  "aiohttp>=3.7",
  "pywttr-models>=1.2,<2",
  "typing-extensions>=4.5",
]
urls.documentation = "https://aiopywttr.readthedocs.io"
urls.repository = "https://github.com/monosans/aiopywttr"

[tool.uv]
dev-dependencies = [
  "covdefaults==2.3.0",
  "mkdocs-material==9.5.39",
  "mkdocs-minify-html-plugin==0.2.3",
  "mkdocstrings==0.26.1",
  "mkdocstrings-python==1.11.1",
  "mypy==1.11.2",
  "pytest==8.3.3",
  "pytest-asyncio==0.24.0",
  "pytest-cov==5.0.0",
  "ruff==0.6.8",
]
