[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
name = "aiopywttr"
version = "2.3.0"
description = "Asynchronous wrapper for wttr.in weather API"
readme = "README.md"
keywords = ["forecast"]
license = { text = "MIT" }
authors = [{ name = "monosans", email = "hsyqixco@protonmail.com" }]
requires-python = ">=3.9"
classifiers = [
  "Framework :: AsyncIO",
  "Framework :: Pydantic",
  "Framework :: Pydantic :: 2",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = [
  "aiohttp>=3.7",
  "pywttr-models>=1.2,<2",
  "typing-extensions>=4.5",
]
urls.documentation = "https://aiopywttr.readthedocs.io"
urls.repository = "https://github.com/monosans/aiopywttr"

[dependency-groups]
dev = [
  "covdefaults==2.3",
  "mypy[faster-cache]==1.13",
  "pytest==8.3.3",
  "pytest-asyncio==0.24",
  "pytest-cov==6",
  "ruff==0.7.4",
]
docs = [
  "mkdocs-material==9.5.45",
  "mkdocs-minify-html-plugin==0.2.3",
  "mkdocstrings==0.27",
  "mkdocstrings-python==1.12.2",
]

[tool.hatch.build.targets.sdist]
include = ["aiopywttr"]
