[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
name = "aiopywttr"
description = "Asynchronous wrapper for wttr.in weather API"
readme = "README.md"
keywords = ["forecast"]
license = { text = "MIT" }
authors = [{ name = "monosans", email = "hsyqixco@protonmail.com" }]
requires-python = ">=3.9"
classifiers = [
  "Framework :: AsyncIO",
  "Framework :: Pydantic",
  "Framework :: Pydantic :: 2",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dynamic = ["version"]
dependencies = ["aiohttp>=3.7", "pywttr-models>=2,<3", "typing-extensions>=4"]
urls.documentation = "https://aiopywttr.readthedocs.io"
urls.repository = "https://github.com/monosans/aiopywttr"

[dependency-groups]
dev = [
  "covdefaults==2.3",
  "mypy[faster-cache]==1.15",
  "pytest==8.3.5",
  "pytest-asyncio==0.26.0",
  "pytest-cov==6.1.1",
  "pytest-github-actions-annotate-failures==0.3",
  "ruff==0.11.8",
]
docs = [
  "mkdocs-material==9.6.12",
  "mkdocs-minify-html-plugin==0.3.1",
  "mkdocstrings==0.29.1",
  "mkdocstrings-python==1.16.10",
  "ruff==0.11.8",
]

[tool.hatch.build.targets.sdist]
include = ["aiopywttr"]

[tool.hatch.version]
path = "src/aiopywttr/__init__.py"
